<resources>
    <string name="app_name" translatable="false">Moka</string>
    <string name="no_description_provided">No description provided.</string>
    <string name="auth_logo_image_content_description">Moka logo</string>
    <string name="auth_get_started">GET STARTED</string>
    <string name="common_retry">Retry</string>
    <string name="common_error_requesting_data">Error while requesting data.</string>
    <string name="empty_screen_icon_content_description">No data</string>
    <string name="users_avatar_content_description">User\'s avatar image</string>
    <string name="repository_owners_avatar_image_content_description">Repository owner\'s avatar image</string>
    <string name="issue_pr_timeline_event_image_content_description">Event type image</string>
    <string name="more_actions_image_content_description">More actions image</string>
    <string name="add_reaction_image_content_description">Add reaction image</string>
    <string name="see_all">See all</string>
    <string name="notification_channel_github_notifications">GitHub notifications</string>
    <string name="notification_subtext_format">%1$s %2$s</string>
    <plurals name="new_notifications_count">
        <item quantity="zero" />
        <item quantity="one">1 new notification</item>
        <item quantity="other">%1$d new notifications</item>
    </plurals>
    <plurals name="repositories_count_of_notifications">
        <item quantity="zero" />
        <item quantity="one">from 1 repository</item>
        <item quantity="other">from %1$d repositories</item>
    </plurals>
    <string name="repository_name_with_username">%1$s/%2$s</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_header_avatar_desc" translation_description="Content description for the user's avatar image of navigation drawer header of main page.">Avatar of current viewer</string>
    <string name="navigation_menu_timeline" translation_description="The timeline menu item title of navigation drawer.">Timeline</string>
    <string name="navigation_menu_inbox" translation_description="The inbox menu item title of navigation drawer.">Inbox</string>
    <string name="navigation_menu_explore" translation_description="The exploration menu item title of navigation drawer.">Explore</string>
    <string name="navigation_menu_settings" translation_description="The settings menu item title of navigation drawer.">Settings</string>
    <string name="navigation_menu_about" translation_description="The about menu item title of navigation drawer.">About</string>
    <string name="navigation_menu_faq_help">FAQ &amp; Help</string>
    <string name="navigation_menu_feedback">Feedback</string>
    <string name="repository_name_unknown" translation_description="If it is unable to get a repository's name, then display this value.">Unknown</string>
    <string name="programming_language_unknown" translation_description="If a repository does not have a programming language, then display this value.">Unknown</string>
    <string name="profile_title">Profile</string>
    <string name="profile_following" translation_description="The following count of user profile.">Following</string>
    <string name="profile_followers" translation_description="The follower(s) count of user profile.">Followers</string>
    <string name="profile_stars" translation_description="The starred repository(ies) count of user profile.">Stars</string>
    <string name="profile_repositories" translation_description="The repository(ies) count of user profile.">Repositories</string>
    <string name="profile_company">Company</string>
    <string name="profile_email">Email</string>
    <string name="profile_location">Location</string>
    <string name="profile_website">Website</string>
    <string name="profile_info">Info</string>
    <string name="profile_pinned">Pinned</string>
    <string name="profile_contact">Contact</string>
    <string name="profile_joined_on">Joined on</string>
    <string name="profile_updated_on">Updated on</string>
    <string name="user_profile_follow" translation_description="The button's content text to follow a user of user profile.">Follow</string>
    <string name="user_profile_unfollow" translation_description="The button's content text to unfollow a user of user profile.">Unfollow</string>
    <string name="user_profile_company_desc" translation_description="The content description of company image of user profile.">Company</string>
    <string name="user_profile_company_action" translation_description="The copy action text of snackbar when click the company image of user profile.">Copy</string>
    <string name="user_profile_location_desc" translation_description="The content description of location image of user profile.">Location</string>
    <string name="user_profile_location_action" translation_description="The copy action text of snackbar when click the location image of user profile.">Copy</string>
    <string name="user_profile_email_desc" translation_description="The content description of email image of user profile.">Email</string>
    <string name="user_profile_email_action" translation_description="The sending a new email action of snackbar when click the email image of user profile.">Compose</string>
    <string name="user_profile_link_desc" translation_description="The content description of link image of user profile.">Link</string>
    <string name="user_profile_link_action" translation_description="The open action text of snackabar when click the link image of user profile.">Open</string>
    <string name="user_profile_edit_profile">Edit profile</string>
    <string name="user_profile_content_empty_title">User not found</string>
    <string name="user_profile_content_empty_action">Search</string>
    <string name="user_profile_pinned_item_caption_format">%1$s \n&#160;\n&#160;\n&#160;</string>
    <string name="event_at">&#160;at&#160;</string>
    <string name="event_to">&#160;to&#160;</string>
    <string name="event_from">&#160;from&#160;</string>
    <string name="event_added">&#160;added&#160;</string>
    <string name="event_deleted">&#160;deleted&#160;</string>
    <string name="event_edited">&#160;edited&#160;</string>
    <string name="event_star">&#160;starred&#160;</string>
    <string name="event_create">&#160;created %1$s&#160;</string>
    <string name="event_create_type_repository">repository</string>
    <string name="event_create_type_branch">branch</string>
    <string name="event_create_type_tag">tag</string>
    <string name="event_comment_on_commit">&#160;commented on commit&#160;</string>
    <string name="event_download">&#160;downloaded&#160;</string>
    <string name="event_follow">&#160;followed&#160;</string>
    <string name="event_fork" translation_description="The action text when someone forked others' repository of timeline event list.">&#160;forked&#160;</string>
    <string name="event_gist">&#160;%1$s Gist&#160;</string>
    <string name="event_gist_action_created">created</string>
    <string name="event_gist_action_updated">updated</string>
    <string name="event_gollum_event">&#160;%1$s a wiki page in&#160;</string>
    <string name="event_gollum_event_action_edited">edited</string>
    <string name="event_gollum_event_action_created">created</string>
    <string name="event_issue_comment">&#160;%1$s a comment on issue&#160;</string>
    <string name="event_issue_comment_action_created">created</string>
    <string name="event_issue_comment_action_edited">edited</string>
    <string name="event_issue_comment_action_deleted">deleted</string>
    <string name="event_issue">&#160;%1$s issue&#160;</string>
    <string name="event_issue_action_opened">opened</string>
    <string name="event_issue_action_edited">edited</string>
    <string name="event_issue_action_deleted">deleted</string>
    <string name="event_issue_action_transferred">transferred</string>
    <string name="event_issue_action_pinned">pinned</string>
    <string name="event_issue_action_unpinned">unpinned</string>
    <string name="event_issue_action_closed">closed</string>
    <string name="event_issue_action_reopened">reopened</string>
    <string name="event_issue_action_assigned">assigned</string>
    <string name="event_issue_action_unassigned">unassigned</string>
    <string name="event_issue_action_labeled">labeled</string>
    <string name="event_issue_action_unlabeled">unlabeled</string>
    <string name="event_issue_action_milestoned">milestoned</string>
    <string name="event_issue_action_demilestoned">demilestoned</string>
    <string name="event_publicized" translation_description="The action text when someone make his/her repository public of timeline event list.">&#160;open-sourced&#160;</string>
    <string name="explore_trending_filter_time_span">Time span</string>
    <string name="explore_trending_filter_time_span_daily">Daily</string>
    <string name="explore_trending_filter_time_span_weekly">Weekly</string>
    <string name="explore_trending_filter_time_span_monthly">Monthly</string>
    <string name="timeline_content_empty_title">You haven\'t received any events yet</string>
    <string name="timeline_content_empty_action">Explore More</string>
    <string name="about_version_info_category">Version info</string>
    <string name="about_build_version_title">Build version</string>
    <string name="about_whats_new_title">What\'s new?</string>
    <string name="about_view_in_google_play_store_title">View in Google Play Store</string>
    <string name="about_join_the_beta_program_title">Join the beta program</string>
    <string name="about_terms_privacy_category">Terms &amp; Privacy</string>
    <string name="about_privacy_policy">Privacy policy</string>
    <string name="about_terms_of_service">Terms of Service</string>
    <string name="about_open_source_category">Open source</string>
    <string name="about_view_source_code_title">View source code</string>
    <string name="about_open_source_licenses_title">Open source licenses</string>
    <string name="about_open_source_licenses_summary">License details of open source software</string>
    <string name="about_others_category">Others</string>
    <string name="settings_theme_category">Theme</string>
    <string name="settings_theme_title">Choose theme</string>
    <string name="settings_notifications_category">Notifications</string>
    <string name="settings_enable_notifications_title">Enable notifications</string>
    <string name="settings_sync_interval_title">Sync interval</string>
    <string name="settings_do_not_disturb_title">Do not disturb</string>
    <string name="settings_do_not_disturb_summary">Don\'t send notifications from 23:00 to 06:00</string>
    <string name="settings_notifications_summary">Due to network traffic situation and battery limitations, notifications are not real time and may be delayed several minutes.</string>
    <string name="settings_drafts_category">Drafts</string>
    <string name="settings_auto_save_title">Auto save</string>
    <string name="settings_clear_drafts_title">Clear drafts</string>
    <string name="settings_search_category">Search</string>
    <string name="settings_do_not_keep_search_history_title">Do not keep search history</string>
    <string name="settings_clear_search_history_title">Clear search history</string>
    <string name="settings_cache_category">Cache</string>
    <string name="settings_keep_data_title">Keep data</string>
    <string name="settings_clear_local_data_title">Clear local data</string>
    <string name="settings_clear_image_cache_title">Clear image cache</string>
    <string name="accounts_add_another_account">Add another account</string>
    <string name="accounts_manage_your_github_account">Manage your Github account</string>
</resources>