<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/about_version_info_category">

        <Preference
            app:iconSpaceReserved="false"
            app:key="key_build_version"
            app:summary="%s"
            app:title="@string/about_build_version_title" />

        <Preference
            app:iconSpaceReserved="false"
            app:key="key_whats_new"
            app:title="@string/about_whats_new_title" />

        <Preference
            app:iconSpaceReserved="false"
            app:key="key_view_in_google_play_store"
            app:title="@string/about_view_in_google_play_store_title" />

        <Preference
            app:iconSpaceReserved="false"
            app:key="key_join_the_beta_program"
            app:title="@string/about_join_the_beta_program_title" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/about_terms_privacy_category">

        <Preference
            app:iconSpaceReserved="false"
            app:key="key_privacy_policy"
            app:title="@string/about_privacy_policy" />

        <Preference
            app:iconSpaceReserved="false"
            app:key="key_terms_of_service"
            app:title="@string/about_terms_of_service" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/about_open_source_category">

        <Preference
            app:iconSpaceReserved="false"
            app:key="key_view_source_code"
            app:title="@string/about_view_source_code_title" />

        <Preference
            app:iconSpaceReserved="false"
            app:key="key_open_source_license"
            app:summary="@string/about_open_source_licenses_summary"
            app:title="@string/about_open_source_licenses_title" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/about_others_category">

        <Preference
            app:iconSpaceReserved="false"
            app:key="key_faq_help"
            app:title="@string/navigation_menu_faq_help" />

        <Preference
            app:iconSpaceReserved="false"
            app:key="key_feedback"
            app:title="@string/navigation_menu_feedback" />

    </PreferenceCategory>

</PreferenceScreen>