<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/settings_theme_category">

        <ListPreference
            app:defaultValue="0"
            app:entries="@array/choose_theme_entries"
            app:entryValues="@array/choose_theme_entry_values"
            app:iconSpaceReserved="false"
            app:key="key_choose_theme"
            app:summary="%s"
            app:title="@string/settings_theme_title" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/settings_notifications_category">

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:iconSpaceReserved="false"
            app:key="key_enable_notifications"
            app:title="@string/settings_enable_notifications_title" />

        <ListPreference
            app:defaultValue="0"
            app:dependency="key_enable_notifications"
            app:entries="@array/sync_interval_entries"
            app:entryValues="@array/sync_interval_entry_values"
            app:iconSpaceReserved="false"
            app:key="key_sync_interval"
            app:summary="%s"
            app:title="@string/settings_sync_interval_title" />

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:dependency="key_enable_notifications"
            app:iconSpaceReserved="false"
            app:key="key_do_not_disturb"
            app:summary="@string/settings_do_not_disturb_summary"
            app:title="@string/settings_do_not_disturb_title" />

        <Preference
            app:icon="@drawable/ic_info_24"
            app:summary="@string/settings_notifications_summary" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/settings_drafts_category">

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:iconSpaceReserved="false"
            app:key="key_auto_save"
            app:title="@string/settings_auto_save_title" />

        <Preference
            app:dependency="key_auto_save"
            app:iconSpaceReserved="false"
            app:key="key_clear_drafts"
            app:title="@string/settings_clear_drafts_title" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/settings_search_category">

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:iconSpaceReserved="false"
            app:key="key_do_not_keep_search_history"
            app:title="@string/settings_do_not_keep_search_history_title" />

        <Preference
            app:dependency="key_do_not_keep_search_history"
            app:iconSpaceReserved="false"
            app:key="key_clear_search_history"
            app:title="@string/settings_clear_search_history_title" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/settings_cache_category">

        <ListPreference
            app:defaultValue="2"
            app:entries="@array/keep_data_entries"
            app:entryValues="@array/keep_data_entry_values"
            app:iconSpaceReserved="false"
            app:key="key_keep_data"
            app:summary="%s"
            app:title="@string/settings_keep_data_title" />

        <Preference
            app:iconSpaceReserved="false"
            app:key="key_clear_local_data"
            app:title="@string/settings_clear_local_data_title" />

        <ListPreference
            app:defaultValue="2"
            app:entries="@array/maximum_size_of_image_cache_entries"
            app:entryValues="@array/maximum_size_of_image_cache_entry_values"
            app:iconSpaceReserved="false"
            app:key="key_maximum_size_of_image_cache"
            app:summary="%s"
            app:title="@string/settings_maximum_size_of_image_cache_title" />

        <Preference
            app:iconSpaceReserved="false"
            app:key="key_clear_image_cache"
            app:title="@string/settings_clear_image_cache_title" />

    </PreferenceCategory>

</PreferenceScreen>