<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/drawer_menu_group_0"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_timeline"
            android:icon="@drawable/ic_menu_timeline_24"
            android:title="@string/navigation_menu_timeline" />
        <item
            android:id="@+id/nav_explore"
            android:icon="@drawable/ic_menu_explore_24"
            android:title="@string/navigation_menu_explore" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_menu_notifications_24"
            android:title="@string/navigation_menu_notifications" />
        <item
            android:id="@+id/nav_drafts"
            android:icon="@drawable/ic_menu_drafts_24"
            android:title="@string/navigation_menu_drafts" />
    </group>

    <group android:id="@+id/drawer_menu_group_1">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings_24"
            android:title="@string/navigation_menu_settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_24"
            android:title="@string/navigation_menu_about" />
        <item
            android:id="@+id/nav_help_faq"
            android:icon="@drawable/ic_help_24"
            android:title="@string/navigation_menu_faq_help" />
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_feedback_24"
            android:title="@string/navigation_menu_feedback" />
    </group>

</menu>
