<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_trending_filter_time_span_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/fragment_content_padding">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/item_trending_filter_time_span_title"
        style="@style/TextAppearance.MaterialComponents.Body2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:ellipsize="end"
        android:gravity="center_vertical"
        android:maxLines="1"
        android:text="@string/explore_trending_filter_time_span"
        android:textColor="@color/colorTextPrimary" />

    <RadioGroup
        android:id="@+id/item_trending_filter_time_span_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checkedButton="@id/item_trending_filter_time_span_daily"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/item_trending_filter_time_span_daily"
            style="@style/Widget.AppCompat.CompoundButton.RadioButton"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingStart="@dimen/fragment_content_padding"
            android:paddingEnd="@dimen/fragment_content_padding"
            android:text="@string/explore_trending_filter_time_span_daily" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/item_trending_filter_time_span_weekly"
            style="@style/Widget.AppCompat.CompoundButton.RadioButton"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingStart="@dimen/fragment_content_padding"
            android:paddingEnd="@dimen/fragment_content_padding"
            android:text="@string/explore_trending_filter_time_span_weekly"
            tools:checked="false" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/item_trending_filter_time_span_monthly"
            style="@style/Widget.AppCompat.CompoundButton.RadioButton"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingStart="@dimen/fragment_content_padding"
            android:paddingEnd="@dimen/fragment_content_padding"
            android:text="@string/explore_trending_filter_time_span_monthly"
            tools:checked="false" />

    </RadioGroup>

</LinearLayout>