<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="io.github.tonnyl.moka.ui.account.AccountViewModel" />

        <variable
            name="viewModel"
            type="AccountViewModel" />

        <variable
            name="accountSize"
            type="int" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="?android:dividerVertical"
        android:orientation="vertical"
        android:showDividers="middle">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:scrollbars="none"
            app:layoutManager="LinearLayoutManager"
            tools:itemCount="3"
            tools:listitem="@layout/item_account" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/account_add_another_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:clickable="true"
            android:drawableStart="@drawable/ic_person_add_24"
            android:drawablePadding="@dimen/fragment_content_padding"
            android:drawableTint="?android:textColorSecondary"
            android:focusable="true"
            android:gravity="center_vertical"
            android:onClick="@{() -> viewModel.onAddAnotherAccount()}"
            android:paddingStart="@dimen/fragment_content_padding"
            android:paddingTop="@dimen/fragment_content_padding"
            android:paddingEnd="@dimen/fragment_content_padding"
            android:paddingBottom="@dimen/fragment_content_padding"
            android:text="@string/accounts_add_another_account"
            android:textColor="?android:textColorPrimary"
            app:visibleUnless="@{accountSize &lt;= 3}" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/account_manage_"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:clickable="true"
            android:drawableStart="@drawable/ic_person_settings"
            android:drawablePadding="@dimen/fragment_content_padding"
            android:drawableTint="?android:textColorSecondary"
            android:focusable="true"
            android:gravity="center_vertical"
            android:onClick="@{() -> viewModel.onManageGitHubAccount()}"
            android:paddingStart="@dimen/fragment_content_padding"
            android:paddingTop="@dimen/fragment_content_padding"
            android:paddingEnd="@dimen/fragment_content_padding"
            android:paddingBottom="@dimen/fragment_content_padding"
            android:text="@string/accounts_manage_your_github_account"
            android:textColor="?android:textColorPrimary" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/fragment_content_padding_half">

            <ImageView
                android:id="@+id/account_bullet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@null"
                android:padding="@dimen/fragment_content_padding_half"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/bullet_small" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/account_privacy_policy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:onClick="@{() -> viewModel.onViewPrivacyPolicy()}"
                android:padding="@dimen/fragment_content_padding_half"
                android:text="@string/about_privacy_policy"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                android:textColor="?android:textColorSecondary"
                app:layout_constraintBottom_toBottomOf="@id/account_bullet"
                app:layout_constraintEnd_toStartOf="@id/account_bullet"
                app:layout_constraintTop_toTopOf="@id/account_bullet" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/account_terms_of_service"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:onClick="@{() -> viewModel.onViewTermsOfService()}"
                android:padding="@dimen/fragment_content_padding_half"
                android:text="@string/about_terms_of_service"
                app:layout_constraintBottom_toBottomOf="@id/account_bullet"
                app:layout_constraintStart_toEndOf="@id/account_bullet"
                app:layout_constraintTop_toTopOf="@id/account_bullet" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</layout>